--- a/login.html
+++ b/login.html
@@ -1,66 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - Free Tutoring</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f5f5f5;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
+      background: #f5f5f5;
     }
-
     .login-container {
-      background: #fff;
+      background: white;
       padding: 30px;
       border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      width: 350px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      width: 320px;
       text-align: center;
     }
-
-    .login-container h2 {
+    h2 {
       margin-bottom: 20px;
       color: #333;
     }
-
-    .login-container input {
+    input {
       width: 100%;
-      padding: 12px;
+      padding: 10px;
       margin: 10px 0;
       border: 1px solid #ccc;
       border-radius: 6px;
     }
-
-    .login-container button {
+    button {
       width: 100%;
       padding: 12px;
       background: #28a745;
       color: white;
-      font-size: 16px;
       border: none;
       border-radius: 6px;
+      font-size: 16px;
       cursor: pointer;
     }
-
-    .login-container button:hover {
-      background: #218838;
+    button:disabled {
+      background: #a5d6a7;
+      cursor: not-allowed;
     }
-
-    .register-link {
+    .error {
+      color: red;
+      font-size: 14px;
+      margin-top: 10px;
+    }
+    .register {
       margin-top: 15px;
       font-size: 14px;
     }
-
-    .register-link a {
-      color: #28a745;
+    .register a {
+      color: green;
       text-decoration: none;
+      font-weight: bold;
     }
   </style>
 </head>
@@ -68,16 +67,63 @@
   <div class="login-container">
     <h2>Login</h2>
     <form id="loginForm">
-      <input type="email" id="email" placeholder="Email" required />
-      <input type="password" id="password" placeholder="Password" required />
-      <button type="submit">Login</button>
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Password" required>
+      <button type="submit" id="loginBtn">Login</button>
+      <div id="errorBox" class="error"></div>
     </form>
-    <p class="register-link">
+    <div class="register">
       Don’t have an account? <a href="register.html">Register</a>
-    </p>
+    </div>
   </div>
 
-  <!-- Firebase + your login.js -->
-  <script type="module" src="login.js"></script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } 
+      from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyBAB1RatL7MlFxCKIDM6y10mArNOsH4_v8",
+      authDomain: "freetutoring-4d649.firebaseapp.com",
+      projectId: "freetutoring-4d649",
+      storageBucket: "freetutoring-4d649.firebasestorage.app",
+      messagingSenderId: "874862317947",
+      appId: "1:874862317947:web:3dd0190bb074729466edde",
+      measurementId: "G-4H92BXM3PC"
+    };
+
+    const app  = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    const form   = document.getElementById("loginForm");
+    const btn    = document.getElementById("loginBtn");
+    const errBox = document.getElementById("errorBox");
+
+    onAuthStateChanged(auth, (user) => {
+      if (user) window.location.href = "index.html"; // redirect after login
+    });
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      errBox.textContent = "";
+      btn.disabled = true;
+
+      const email = document.getElementById("email").value.trim();
+      const pass  = document.getElementById("password").value;
+
+      try {
+        await signInWithEmailAndPassword(auth, email, pass);
+        window.location.href = "index.html"; // redirect after login
+      } catch (err) {
+        let msg = err.code || "Login failed";
+        if (msg.includes("auth/invalid-credential")) msg = "Invalid email or password.";
+        if (msg.includes("auth/user-not-found"))     msg = "No account found.";
+        if (msg.includes("auth/wrong-password"))     msg = "Wrong password.";
+        errBox.textContent = msg;
+      } finally {
+        btn.disabled = false;
+      }
+    });
+  </script>
 </body>
 </html>
